--- a/Analysis_on_a_Video_Sharing_Site_platform.ipynb
+++ b/Analysis_on_a_Video_Sharing_Site_platform.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFrctJHHxegvMLB541EWWG",
+      "authorship_tag": "ABX9TyMqhfMfxETeIr3DVMmC+3Bj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -696,7 +696,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Check the number of records of random video: 2kyS6SvSYSE get from df.head(1)\n",
+        "#Check the number of records of random video: gim2kprjL50\n",
         "df[df.video_id == 'gim2kprjL50']"
       ],
       "metadata": {
